Fix chat pane collapse hover obscuring VideoJS controls.

--- a/static/stream.css
+++ b/static/stream.css
@@ -32,6 +32,11 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+.vjs-control-bar, .info {
+  z-index: 200;
+}
+
 .info {
   display: flex;
   flex-direction: row;
@@ -76,7 +81,7 @@ html, body {
   padding: 0px;
   margin: 0px;
   transition: width 0.1s ease-in-out;
-  z-index: 1000000;
+  z-index: 100;
 }
 
 .chat-pane.chat-collapsed {
